--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GOOGLE_API_KEY=AIzaSyCTMJ_00Z-oV8c2XMCiyGpybwR-otvsAhU
+DATABASE_URL=postgresql://neondb_owner:5gzxH6ptaIPv@ep-raspy-hat-a56h8kx3.us-east-2.aws.neon.tech/neondb?sslmode=require
