--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,7 @@ dependencies = [
     "uvicorn>=0.34.0",
     "langgraph>=0.2.60",
     "faiss-cpu>=1.9.0.post1",
+    "sqlmodel>=0.0.22",
+    "streamlit>=1.41.1",
+    "psycopg2-binary>=2.9.10",
 ]
