--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_API_KEY=AIzaSyCTMJ_00Z-oV8c2XMCiyGpybwR-otvsAhU
 DATABASE_URL=postgresql://neondb_owner:5gzxH6ptaIPv@ep-raspy-hat-a56h8kx3.us-east-2.aws.neon.tech/neondb?sslmode=require
+MONGODB_URI= mongodb+srv://farrukh:1122@cluster0.urhhz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
