--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,7 @@ dependencies = [
     "sqlmodel>=0.0.22",
     "streamlit>=1.41.1",
     "psycopg2-binary>=2.9.10",
+    "pymongo>=4.9.2",
+    "langgraph-checkpoint>=2.0.9",
+    "langgraph-checkpoint-mongodb>=0.1.0",
 ]
