--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,6 @@ dependencies = [
     "pymongo>=4.9.2",
     "langgraph-checkpoint>=2.0.9",
     "langgraph-checkpoint-mongodb>=0.1.0",
+    "crewai>=0.100.1",
+    "crewai-tools>=0.33.0",
 ]
